2011-11-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php
	include/functions.php
	include/functions_agents.php
	operation/search_modules.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_ultimopaquete.php
	operation/agentes/alerts_status.php
	operation/agentes/estado_generalagente.php
	operation/agentes/estado_agente.php
	operation/agentes/estado_monitores.php
	operation/agentes/ver_agente.php
	operation/search_agents.php
	operation/search_alerts.php
	godmode/agentes/module_manager.php
	godmode/agentes/modificar_agente.php
	godmode/agentes/configurar_agente.php
	godmode/alerts/alert_list.list.php
	godmode/users/configure_user.php: Reconstruct policy acl
	system to allow in enterprise version get extra access for 
	a user in a policy

2011-11-24  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_integria_url.php
	include/help/es/help_integria_url.php
	godmode/setup/setup.php: Added help for integria api
	url in setup

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/performance.php: Changed html element from input 
	text to select in SLA period (seconds) parameter.
	
	Fixes: #3437884

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_generalagente.php: Hide agent access 
	graph when "Use agent access graph" is disabled.
	
	Fixes: #3437893

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Added confirmation when "Use Enterprise 
	ACL System" is checked.
	
	Fixes: #3438190

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/menu.php: Fixed a wrong sec2 tag that makes enterprise 
	ACLs fail.
	
	Fixes: #3439464

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/networkmap.php
	 include/functions_networkmap.php: Added links to agents, modules 
	and groups in single view of networkmaps.
	
	Fixes: #3439487

2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
