@@ -1,3 +1,8 @@
+2011-11-25  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_config.php: Fixed API IP list of
+	access entities bug
+
 2011-11-24  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_api.php
